--- a/app/view/pc/styles/join_activity.scss
+++ b/app/view/pc/styles/join_activity.scss
@@ -136,6 +136,11 @@ $t-hover-color: #ee534e;
 
                                 border: 1px dotted #ee534e;
                             }
+
+                            .production-error {
+                                margin: 5px 0 0 30px;
+                                width: 150px;
+                            }
                         }
                     }
 
