--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -2034,33 +2034,33 @@ div.dis-ib {
 
 .describe-detail {
   width: 51.28205vw !important; }
-.join-activity-div {
+.apply-certified-architect {
   padding-top: 1.4652vw;
   background-color: #ebe6e6; }
-  .join-activity-div .container {
+  .apply-certified-architect .container {
     min-height: 36.63004vw; }
-    .join-activity-div .container .layui-tab {
+    .apply-certified-architect .container .layui-tab {
       margin: 0; }
-      .join-activity-div .container .layui-tab .layui-tab-title {
+      .apply-certified-architect .container .layui-tab .layui-tab-title {
         width: 18.31502vw;
         height: auto;
         border-bottom: none;
         border-radius: 0.3663vw;
         background-color: #fff;
         overflow: hidden; }
-        .join-activity-div .container .layui-tab .layui-tab-title .tab-item {
+        .apply-certified-architect .container .layui-tab .layui-tab-title .tab-item {
           text-align: left; }
-        .join-activity-div .container .layui-tab .layui-tab-title .layui-this {
+        .apply-certified-architect .container .layui-tab .layui-tab-title .layui-this {
           border-radius: 0.3663vw;
           background-color: #f39549; }
-        .join-activity-div .container .layui-tab .layui-tab-title .layui-this:after {
+        .apply-certified-architect .container .layui-tab .layui-tab-title .layui-this:after {
           border-top-color: #fff;
           border-right-color: #fff; }
-      .join-activity-div .container .layui-tab .layui-tab-content {
+      .apply-certified-architect .container .layui-tab .layui-tab-content {
         margin-left: 0.7326vw;
         padding: 0;
         width: 65.93407vw; }
-        .join-activity-div .container .layui-tab .layui-tab-content .layui-tab-item .tab-title {
+        .apply-certified-architect .container .layui-tab .layui-tab-content .layui-tab-item .tab-title {
           padding-left: 2.9304vw;
           width: 100%;
           height: 5.12821vw;
@@ -2068,32 +2068,52 @@ div.dis-ib {
           line-height: 5.12821vw;
           border-radius: 0.14652vw;
           background-color: #fff; }
-        .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info {
+        .apply-certified-architect .container .layui-tab .layui-tab-content .apply-rule .rule-info {
+          margin-top: 0.3663vw;
+          padding: 1.4652vw;
+          background-color: #fff; }
+        .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .layui-form .upload-form {
+          padding: 1.4652vw 0 0 0.7326vw; }
+        .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .layui-form .layui-form-item .layui-form-label {
+          width: 7.32601vw; }
+        .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info {
           margin-top: 0.3663vw;
           padding-bottom: 0.7326vw;
           background-color: #fff; }
-          .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .info-title {
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .info-title {
             padding-left: 2.9304vw;
             width: 100%;
             height: 3.663vw;
             font-size: 1.0989vw;
             line-height: 3.663vw;
             border-bottom: 1px solid #c9cdcf; }
-          .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .layui-upload {
-            margin: 0.7326vw; }
-            .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .layui-upload .layui-btn {
-              margin-left: 0.7326vw; }
-          .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .layui-upload-drag {
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-upload-drag {
             top: 50%;
-            margin: 3.663vw 0 0 3.663vw;
+            margin: 3.663vw 0 2.1978vw 3.663vw;
             height: 14.65201vw; }
-          .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .layui-form {
+            .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-upload-drag .icon {
+              font-size: 7.32601vw; }
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-upload-list {
+            display: none;
+            margin: 3.663vw 0 2.1978vw 3.663vw; }
+            .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-upload-list .layui-upload-img {
+              margin-left: 0.7326vw;
+              height: 14.65201vw;
+              width: auto;
+              border: 1px dotted #ee534e; }
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .prize-error {
+            margin: 0.3663vw 0 0 2.1978vw;
+            width: 10.98901vw; }
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .certificate-error {
+            margin: 0.3663vw 0 0 2.1978vw;
+            width: 10.98901vw; }
+          .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-form {
             margin-top: 1.4652vw;
             padding-left: 1.4652vw;
             width: 58.60806vw; }
-            .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .upload-info .layui-form .layui-form-item .layui-form-label {
+            .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .upload-info .layui-form .layui-form-item .layui-form-label {
               width: 7.32601vw; }
-        .join-activity-div .container .layui-tab .layui-tab-content .apply-activity-detail .publich-btn {
+        .apply-certified-architect .container .layui-tab .layui-tab-content .apply-detail .publich-btn {
           margin: 1.4652vw 0 0 1.4652vw;
           background-color: #f39549; }
 
