--- a/app/view/pc/styles/my_space.scss
+++ b/app/view/pc/styles/my_space.scss
@@ -375,30 +375,30 @@ $t-hover-color: #ee534e;
 
             .personal-message {
                 background-color: #fff;
-
+        
                 .content {
                     float: left;
                 }
-
+        
                 .flex-text-wrap,
                 pre {
                     margin: 0 !important;
                 }
-
+        
                 .commentAll {
                     padding: 30px 40px;
                     margin: 20px auto;
                 }
-
+        
                 .plBtn {
                     display: block;
                     float: right;
-
+        
                     margin-right: 2px;
                     margin-top: 20px;
                     width: 75px;
                     height: 36px;
-
+        
                     font-size: 12px;
                     line-height: 36px;
                     text-align: center;
@@ -408,208 +408,207 @@ $t-hover-color: #ee534e;
                     background-color: $main-color;
                     color: #FFFFFF;
                 }
-
+        
                 .plBtn:hover {
                     background-color: #2f904d;
                 }
-
+        
                 /*----------评论区域 begin----------*/
                 .comment-show {
                     margin-top: 20px;
                 }
-
+        
                 .comment-show-con {
                     padding: 10px 0;
                     width: 100%;
-
+        
                     border-top: 1px solid #EDEDED;
                 }
-
+        
                 .comment-show-con-img {
                     margin-top: 5px;
                     width: 48px;
                     height: 48px;
-
+        
                     overflow: hidden;
+        
+                    background-position: 100% 100%;
+                    background-size: cover;
                 }
-
+        
                 .comment-show-con-list {
                     margin-left: 3%;
                     width: 85%;
                 }
-
+        
                 .pl-text {
                     margin-top: 7px;
                     width: 100%;
-
+        
                     word-wrap: break-word;
                     overflow: hidden;
                 }
-
+        
                 .date-dz {
                     width: 100%;
-
+        
                     float: left;
                 }
-
+        
                 .hf-list-con {
                     float: left;
-
+        
                     margin-top: 7px;
                     width: 100%;
-
+        
                     background-color: #eaeaec;
                 }
-
+        
                 .comment-size-name {
                     font-size: 12px;
-
+        
                     color: #339b53;
                 }
-
+        
                 .my-pl-con {
                     width: 100%;
-
+        
                     font-size: 12px;
-
+        
                     color: #8b8b8b;
                 }
-
+        
                 .date-dz-left {
                     display: block;
-
+        
                     padding-top: 18px;
-
+        
                     font-size: 12px;
                     color: #8b8b8b;
                 }
-
+        
                 .comment-time,
                 .comment-pl-block {
                     padding-top: 7px;
                 }
-
+        
                 .comment-pl-block {
                     margin-top: 0;
                 }
-
+        
                 .date-dz-right {
                     position: relative;
                     display: block;
-
+        
                     padding-top: 6px;
                     padding-right: 18px;
                     
                     overflow: hidden;
                 }
-
+        
                 .removeBlock {
                     display: block;
                     float: left;
-
+        
                     margin-right: 24px;
-
+        
                     font-size: 12px;
-
+        
                     color: #8b8b8b;
                     opacity: 0;
                 }
-
+        
                 .hf-con-block {
                     display: block;
                 }
-
+        
                 .date-dz-pl,
                 .date-dz-line,
                 .date-dz-z {
                     font-size: 12px;
                     color: #8b8b8b;
                 }
-
+        
                 .date-dz-line {
                     display: block;
                     padding: 0 20px;
                 }
-
+        
                 .date-dz-z-click-red {
                     margin-right: 5px;
                     width: 17px;
                     height: 17px;
-
-                    display: block;
+        
+                    display: none;
                     float: left;
-
-                    background-image: url('/public/images/cover/1.jpg');
+        
                     background-repeat: no-repeat;
-                    background-position: -6px -198px;
+                    background-position: 100% 100%;
+                    background-size: cover;
                 }
-
+        
                 .z-num {
                     font-style: normal;
                 }
-
+        
                 .date-dz-z-click {
                     color: #b83b44;
                 }
-
-                .red {
-                    background-position: -6px -119px !important;
-                }
-
+        
                 .hf-pl {
                     display: block;
                     float: right;
-
+        
                     margin-right: 2px;
                     margin-top: 20px;
                     width: 70px;
                     height: 30px;
-
+        
                     line-height: 30px;
                     text-align: center;
                     font-size: 12px;
                     border-radius: 6px;
-
+        
                     background-color: #339b53;
                     color: #FFFFFF;
                 }
-
+        
                 .hf-con {
                     margin-top: 24px;
                     width: 100%;
                 }
-
+        
                 .hf-input {
                     font-size: 12px;
                 }
-
+        
                 .all-pl-con {
                     margin: 0 2%;
                     padding: 2% 0;
                     width: 96%;
-
+        
                     float: left;
                 }
-
+        
                 .atName {
                     font-size: 12px;
-
+        
                     color: #339b53;
                 }
-
+        
                 .hfpl-text {
                     margin-top: 0;
                 }
-
+        
                 .date-dz:hover .removeBlock {
                     opacity: 1;
                 }
-
+        
                 .hf-list-con .all-pl-con {
                     border-top: 1px solid #d9d9d9;
                     padding-bottom: 12px;
                 }
-
+        
                 .hf-list-con .all-pl-con:first-child {
                     border-top: 0;
                 }
@@ -619,86 +618,86 @@ $t-hover-color: #ee534e;
                     white-space: pre-wrap;
                     word-wrap: break-word;
                 }
-
+        
                 .flex-text-wrap {
                     position: relative;
-
+        
                     width: 100%;
-
+        
                     *zoom: 1;
                 }
-
+        
                 textarea,
                 .flex-text-wrap {
                     margin: 0;
                     padding: 0;
-
+        
                     border: none;
                     *padding-bottom: 0 !important;
                     outline: 0;
                 }
-
+        
                 .flex-text-wrap textarea,
                 .flex-text-wrap pre {
                     width: 100%;
-
+        
                     *white-space: pre;
                     *word-wrap: break-word;
                     white-space: pre-wrap;
-
+        
                     box-sizing: border-box;
                 }
-
+        
                 .flex-text-wrap textarea {
                     overflow: hidden;
-
+        
                     position: absolute;
                     top: 0;
                     left: 0;
-
+        
                     height: 100%;
                     width: 100%;
-
+        
                     resize: none;
                 }
-
+        
                 .flex-text-wrap pre {
                     display: block;
-
+        
                     visibility: hidden;
                 }
-
+        
                 .flex-text-wrap,
                 textarea {
                     margin-bottom: 25px
                 }
-
+        
                 textarea,
                 .flex-text-wrap pre {
                     padding: 10px 15px;
                     width: 100%;
-
+        
                     line-height: 1;
                     font-size: 15px;
-
+        
                     border: 1px solid #beb9b9;
                     -webkit-appearance: none;
                     border-radius: 3px;
                     box-shadow: 0 0 8px rgba(182, 195, 214, .6) inset, 0 1px 1px #fff;
                     transition-duration: 300ms;
                     transition-property: border-color, box-shadow;
-
+        
                     background-clip: padding-box;
                     background: rgb(236, 234, 234);
                 }
-
+        
                 .fork-link {
                     display: block;
-
+        
                     position: absolute;
                     top: 0;
                     right: 0;
-
+        
                     width: 140px;
                 }
             }
