--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -2639,248 +2639,205 @@ div.dis-ib {
   padding: 2.1978vw; }
 
 .production-detail-comment {
-  padding: 2.1978vw;
-  background-color: #e9e6e6; }
-  .production-detail-comment .container .comment-div {
-    background-color: #fff;
-    min-height: 21.97802vw;
-    /*初始化样式*/
-    /*清除浮动*/
-    /*浮动*/
-    /*----------------------------------------------------------------------------------------------------------*/
-    /*----------评论区域 begin----------*/
-    /*----------评论区域 end----------*/ }
-    .production-detail-comment .container .comment-div body, .production-detail-comment .container .comment-div h1, .production-detail-comment .container .comment-div h2, .production-detail-comment .container .comment-div h3, .production-detail-comment .container .comment-div h4, .production-detail-comment .container .comment-div h5, .production-detail-comment .container .comment-div ul, .production-detail-comment .container .comment-div li, .production-detail-comment .container .comment-div a, .production-detail-comment .container .comment-div div, .production-detail-comment .container .comment-div p, .production-detail-comment .container .comment-div span, .production-detail-comment .container .comment-div table, .production-detail-comment .container .comment-div tr, .production-detail-comment .container .comment-div td, .production-detail-comment .container .comment-div img {
-      margin: 0;
-      padding: 0; }
-    .production-detail-comment .container .comment-div ul {
-      padding: 0;
-      margin: 0; }
-    .production-detail-comment .container .comment-div li {
-      list-style: none; }
-    .production-detail-comment .container .comment-div a {
-      text-decoration: none; }
-    .production-detail-comment .container .comment-div img {
-      outline: none;
-      border: 0; }
-    .production-detail-comment .container .comment-div body {
-      font-family: "Microsoft Yahei"; }
-    .production-detail-comment .container .comment-div .clearfix:before,
-    .production-detail-comment .container .comment-div .clearfix:after {
-      content: " ";
-      display: table; }
-    .production-detail-comment .container .comment-div .clearfix:after {
-      clear: both; }
-    .production-detail-comment .container .comment-div .clearfix {
-      zoom: 1; }
-    .production-detail-comment .container .comment-div .pull-right {
-      float: right !important; }
-    .production-detail-comment .container .comment-div .pull-left {
-      float: left !important; }
-    .production-detail-comment .container .comment-div .content {
-      float: left; }
-    .production-detail-comment .container .comment-div .flex-text-wrap, .production-detail-comment .container .comment-div pre {
-      margin: 0 !important; }
-    .production-detail-comment .container .comment-div .commentAll {
-      width: 36.63004vw;
-      padding: 1.4652vw;
-      border: 1px solid #ededed;
-      margin: 1.4652vw auto; }
-    .production-detail-comment .container .comment-div .plBtn {
-      width: 5.49451vw;
-      height: 2.63736vw;
-      line-height: 2.63736vw;
-      background-color: #339b53;
-      text-align: center;
-      display: block;
-      float: right;
-      color: #FFFFFF;
-      font-size: 0.87912vw;
-      border-radius: 0.43956vw;
-      margin-right: 0.14652vw;
-      margin-top: 1.4652vw; }
-    .production-detail-comment .container .comment-div .plBtn:hover {
-      background-color: #2f904d; }
-    .production-detail-comment .container .comment-div .comment-show {
-      margin-top: 1.4652vw; }
-    .production-detail-comment .container .comment-div .comment-show-con {
-      width: 100%;
-      border-top: 1px solid #EDEDED;
-      padding: 0.7326vw 0; }
-    .production-detail-comment .container .comment-div .comment-show-con-img {
-      width: 3.51648vw;
-      height: 3.51648vw;
-      overflow: hidden;
-      margin-top: 0.3663vw; }
-    .production-detail-comment .container .comment-div .comment-show-con-list {
-      width: 85%;
-      margin-left: 3%; }
-    .production-detail-comment .container .comment-div .pl-text {
-      width: 100%;
-      margin-top: 0.51282vw;
-      word-wrap: break-word;
-      overflow: hidden; }
-    .production-detail-comment .container .comment-div .date-dz {
-      width: 100%;
-      float: left; }
-    .production-detail-comment .container .comment-div .hf-list-con {
-      float: left;
-      width: 100%;
-      background-color: #eaeaec;
-      margin-top: 0.51282vw; }
-    .production-detail-comment .container .comment-div .comment-size-name {
-      font-size: 0.87912vw;
-      color: #339b53; }
-    .production-detail-comment .container .comment-div .my-pl-con {
-      font-size: 0.87912vw;
-      color: #8b8b8b;
-      width: 100%; }
-    .production-detail-comment .container .comment-div .date-dz-left {
-      font-size: 0.87912vw;
-      color: #8b8b8b;
-      display: block;
-      padding-top: 1.31868vw; }
-    .production-detail-comment .container .comment-div .comment-time, .production-detail-comment .container .comment-div .comment-pl-block {
-      padding-top: 0.51282vw; }
-    .production-detail-comment .container .comment-div .comment-pl-block {
-      margin-top: 0; }
-    .production-detail-comment .container .comment-div .date-dz-right {
-      display: block;
-      padding-top: 0.43956vw;
-      padding-right: 1.31868vw;
-      position: relative;
-      overflow: hidden; }
-    .production-detail-comment .container .comment-div .removeBlock {
-      float: left;
-      font-size: 0.87912vw;
-      color: #8b8b8b;
-      margin-right: 1.75824vw;
-      display: block;
-      opacity: 0; }
-    .production-detail-comment .container .comment-div .hf-con-block {
-      display: block; }
-    .production-detail-comment .container .comment-div .date-dz-pl, .production-detail-comment .container .comment-div .date-dz-line, .production-detail-comment .container .comment-div .date-dz-z {
-      font-size: 0.87912vw;
-      color: #8b8b8b; }
-    .production-detail-comment .container .comment-div .date-dz-line {
-      display: block;
-      padding: 0 1.4652vw; }
-    .production-detail-comment .container .comment-div .date-dz-z-click-red {
-      width: 1.24542vw;
-      height: 1.24542vw;
-      display: block;
-      float: left;
-      background-image: url("/public/images/cover/1.jpg");
-      background-repeat: no-repeat;
-      background-position: -0.43956vw -14.50549vw;
-      margin-right: 0.3663vw; }
-    .production-detail-comment .container .comment-div .z-num {
-      font-style: normal; }
-    .production-detail-comment .container .comment-div .date-dz-z-click {
-      color: #b83b44; }
-    .production-detail-comment .container .comment-div .red {
-      background-position: -0.43956vw -8.71795vw !important; }
-    .production-detail-comment .container .comment-div .hf-pl {
-      width: 5.12821vw;
-      height: 2.1978vw;
-      line-height: 2.1978vw;
-      background-color: #339b53;
-      text-align: center;
-      display: block;
-      float: right;
-      color: #FFFFFF;
-      font-size: 0.87912vw;
-      border-radius: 0.43956vw;
-      margin-right: 0.14652vw;
-      margin-top: 1.4652vw; }
-    .production-detail-comment .container .comment-div .hf-con {
-      width: 100%;
-      margin-top: 1.75824vw; }
-    .production-detail-comment .container .comment-div .hf-input {
-      font-size: 0.87912vw; }
-    .production-detail-comment .container .comment-div .all-pl-con {
-      width: 96%;
-      padding: 2% 0;
-      float: left;
-      margin: 0 2%; }
-    .production-detail-comment .container .comment-div .atName {
-      font-size: 0.87912vw;
-      color: #339b53; }
-    .production-detail-comment .container .comment-div .hfpl-text {
-      margin-top: 0; }
-    .production-detail-comment .container .comment-div .date-dz:hover .removeBlock {
-      opacity: 1; }
-    .production-detail-comment .container .comment-div .hf-list-con .all-pl-con {
-      border-top: 1px solid #d9d9d9;
-      padding-bottom: 0.87912vw; }
-    .production-detail-comment .container .comment-div .hf-list-con .all-pl-con:first-child {
-      border-top: 0; }
-    .production-detail-comment .container .comment-div pre {
-      white-space: pre;
-      white-space: pre-wrap;
-      word-wrap: break-word; }
-    .production-detail-comment .container .comment-div .flex-text-wrap {
-      width: 100%;
-      position: relative;
-      *zoom: 1; }
-    .production-detail-comment .container .comment-div textarea,
-    .production-detail-comment .container .comment-div .flex-text-wrap {
-      outline: 0;
-      margin: 0;
-      border: none;
-      padding: 0;
-      *padding-bottom: 0 !important; }
-    .production-detail-comment .container .comment-div .flex-text-wrap textarea,
-    .production-detail-comment .container .comment-div .flex-text-wrap pre {
-      *white-space: pre;
-      *word-wrap: break-word;
-      white-space: pre-wrap;
-      width: 100%;
-      -ms-box-sizing: border-box;
-      box-sizing: border-box; }
-    .production-detail-comment .container .comment-div .flex-text-wrap textarea {
-      overflow: hidden;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      resize: none;
-      /* IE7 box-sizing fudge factor */
-      *height: 94%;
-      *width: 94%; }
-    .production-detail-comment .container .comment-div .flex-text-wrap pre {
-      display: block;
-      visibility: hidden; }
-    .production-detail-comment .container .comment-div .flex-text-wrap,
-    .production-detail-comment .container .comment-div textarea {
-      margin-bottom: 1.8315vw; }
-    .production-detail-comment .container .comment-div textarea,
-    .production-detail-comment .container .comment-div .flex-text-wrap pre {
-      line-height: 1.7;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      font-size: 100%;
-      padding: 0.7326vw 1.0989vw;
-      border: 1px solid #c6c8ce;
-      width: 100%;
-      -webkit-appearance: none;
-      background: #fff;
-      border-radius: 0.21978vw;
-      background-clip: padding-box;
-      box-shadow: 0 0 0.58608vw rgba(182, 195, 214, 0.6) inset, 0 1px 1px #fff;
-      transition-duration: 300ms;
-      -webkit-transition-easing: ease-in-out;
-      -moz-transition-easing: ease-in-out;
-      -o-transition-easing: ease-in-out;
-      -ms-transition-easing: ease-in-out;
-      transition-easing: ease-in-out;
-      transition-property: border-color, box-shadow; }
-    .production-detail-comment .container .comment-div .fork-link {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 10.25641vw; }
+  background-color: #fff;
+  /*----------评论区域 begin----------*/
+  /*----------评论区域 end----------*/ }
+  .production-detail-comment .content {
+    float: left; }
+  .production-detail-comment .flex-text-wrap,
+  .production-detail-comment pre {
+    margin: 0 !important; }
+  .production-detail-comment .commentAll {
+    padding: 2.1978vw 2.9304vw;
+    margin: 1.4652vw auto; }
+  .production-detail-comment .plBtn {
+    display: block;
+    float: right;
+    margin-right: 0.14652vw;
+    margin-top: 1.4652vw;
+    width: 5.49451vw;
+    height: 2.63736vw;
+    font-size: 0.87912vw;
+    line-height: 2.63736vw;
+    text-align: center;
+    border-radius: 0.43956vw;
+    background-color: #f068a9;
+    color: #FFFFFF; }
+  .production-detail-comment .plBtn:hover {
+    background-color: #2f904d; }
+  .production-detail-comment .comment-show {
+    margin-top: 1.4652vw; }
+  .production-detail-comment .comment-show-con {
+    padding: 0.7326vw 0;
+    width: 100%;
+    border-top: 1px solid #EDEDED; }
+  .production-detail-comment .comment-show-con-img {
+    margin-top: 0.3663vw;
+    width: 3.51648vw;
+    height: 3.51648vw;
+    overflow: hidden;
+    background-position: 100% 100%;
+    background-size: cover; }
+  .production-detail-comment .comment-show-con-list {
+    margin-left: 3%;
+    width: 85%; }
+  .production-detail-comment .pl-text {
+    margin-top: 0.51282vw;
+    width: 100%;
+    word-wrap: break-word;
+    overflow: hidden; }
+  .production-detail-comment .date-dz {
+    width: 100%;
+    float: left; }
+  .production-detail-comment .hf-list-con {
+    float: left;
+    margin-top: 0.51282vw;
+    width: 100%;
+    background-color: #eaeaec; }
+  .production-detail-comment .comment-size-name {
+    font-size: 0.87912vw;
+    color: #339b53; }
+  .production-detail-comment .my-pl-con {
+    width: 100%;
+    font-size: 0.87912vw;
+    color: #8b8b8b; }
+  .production-detail-comment .date-dz-left {
+    display: block;
+    padding-top: 1.31868vw;
+    font-size: 0.87912vw;
+    color: #8b8b8b; }
+  .production-detail-comment .comment-time,
+  .production-detail-comment .comment-pl-block {
+    padding-top: 0.51282vw; }
+  .production-detail-comment .comment-pl-block {
+    margin-top: 0; }
+  .production-detail-comment .date-dz-right {
+    position: relative;
+    display: block;
+    padding-top: 0.43956vw;
+    padding-right: 1.31868vw;
+    overflow: hidden; }
+  .production-detail-comment .removeBlock {
+    display: block;
+    float: left;
+    margin-right: 1.75824vw;
+    font-size: 0.87912vw;
+    color: #8b8b8b;
+    opacity: 0; }
+  .production-detail-comment .hf-con-block {
+    display: block; }
+  .production-detail-comment .date-dz-pl,
+  .production-detail-comment .date-dz-line,
+  .production-detail-comment .date-dz-z {
+    font-size: 0.87912vw;
+    color: #8b8b8b; }
+  .production-detail-comment .date-dz-line {
+    display: block;
+    padding: 0 1.4652vw; }
+  .production-detail-comment .date-dz-z-click-red {
+    margin-right: 0.3663vw;
+    width: 1.24542vw;
+    height: 1.24542vw;
+    display: none;
+    float: left;
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    background-size: cover; }
+  .production-detail-comment .z-num {
+    font-style: normal; }
+  .production-detail-comment .date-dz-z-click {
+    color: #b83b44; }
+  .production-detail-comment .hf-pl {
+    display: block;
+    float: right;
+    margin-right: 0.14652vw;
+    margin-top: 1.4652vw;
+    width: 5.12821vw;
+    height: 2.1978vw;
+    line-height: 2.1978vw;
+    text-align: center;
+    font-size: 0.87912vw;
+    border-radius: 0.43956vw;
+    background-color: #339b53;
+    color: #FFFFFF; }
+  .production-detail-comment .hf-con {
+    margin-top: 1.75824vw;
+    width: 100%; }
+  .production-detail-comment .hf-input {
+    font-size: 0.87912vw; }
+  .production-detail-comment .all-pl-con {
+    margin: 0 2%;
+    padding: 2% 0;
+    width: 96%;
+    float: left; }
+  .production-detail-comment .atName {
+    font-size: 0.87912vw;
+    color: #339b53; }
+  .production-detail-comment .hfpl-text {
+    margin-top: 0; }
+  .production-detail-comment .date-dz:hover .removeBlock {
+    opacity: 1; }
+  .production-detail-comment .hf-list-con .all-pl-con {
+    border-top: 1px solid #d9d9d9;
+    padding-bottom: 0.87912vw; }
+  .production-detail-comment .hf-list-con .all-pl-con:first-child {
+    border-top: 0; }
+  .production-detail-comment pre {
+    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word; }
+  .production-detail-comment .flex-text-wrap {
+    position: relative;
+    width: 100%;
+    *zoom: 1; }
+  .production-detail-comment textarea,
+  .production-detail-comment .flex-text-wrap {
+    margin: 0;
+    padding: 0;
+    border: none;
+    *padding-bottom: 0 !important;
+    outline: 0; }
+  .production-detail-comment .flex-text-wrap textarea,
+  .production-detail-comment .flex-text-wrap pre {
+    width: 100%;
+    *white-space: pre;
+    *word-wrap: break-word;
+    white-space: pre-wrap;
+    box-sizing: border-box; }
+  .production-detail-comment .flex-text-wrap textarea {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    resize: none; }
+  .production-detail-comment .flex-text-wrap pre {
+    display: block;
+    visibility: hidden; }
+  .production-detail-comment .flex-text-wrap,
+  .production-detail-comment textarea {
+    margin-bottom: 1.8315vw; }
+  .production-detail-comment textarea,
+  .production-detail-comment .flex-text-wrap pre {
+    padding: 0.7326vw 1.0989vw;
+    width: 100%;
+    line-height: 1;
+    font-size: 1.0989vw;
+    border: 1px solid #beb9b9;
+    -webkit-appearance: none;
+    border-radius: 0.21978vw;
+    box-shadow: 0 0 0.58608vw rgba(182, 195, 214, 0.6) inset, 0 1px 1px #fff;
+    transition-duration: 300ms;
+    transition-property: border-color, box-shadow;
+    background-clip: padding-box;
+    background: #eceaea; }
+  .production-detail-comment .fork-link {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10.25641vw; }
 .register-page {
   width: 100%;
   height: 85vh;
